      in one branch, and modified in the other. If there was a criss-cross
      merge, we would cause the deletion to conflict a second time.
      (Vincent Ladeuil, John Arbash Meinel)

    * There was another bug in how we chose the correct intermediate LCA in
      criss-cross merges leading to several kind of changes be incorrectly
      handled.
      (John Arbash Meinel, Vincent Ladeuil)

  DOCUMENTATION:

    * Improved plugin developer documentation.  (Martin Pool)

  API CHANGES:

    * ``ProgressBarStack`` is deprecated; instead use
      ``ui_factory.nested_progress_bar`` to create new progress bars.

    * ForeignVcsMapping() now requires a ForeignVcs object as first
      argument. (Jelmer Vernooij)

    * ForeignVcsMapping.show_foreign_revid() has been moved to
      ForeignVcs. (Jelmer Vernooij)

    * Revision specifiers are now registered in
      ``bzrlib.revisionspec.revspec_registry``, and the old list of 
      revisionspec classes (``bzrlib.revisionspec.SPEC_TYPES``) has been
      deprecated. (Jelmer Vernooij, #321183)

    * The progress and UI classes have changed; the main APIs remain the
      same but code that provides a new UI or progress bar class may
      need to be updated.  (Martin Pool)

  TESTING:

  INTERNALS:

    * Default User Interface (UI) is CLIUIFactory when bzr runs in a dumb
      terminal. It is sometimes desirable do override this default by forcing
      bzr to use TextUIFactory. This can be achieved by setting the
      BZR_USE_TEXT_UI environment variable (emacs shells, as opposed to
      compile buffers, are such an example).
      (Vincent Ladeuil)

    * New API ``Branch.iter_merge_sorted_revisions()`` that iterates over
      ``(revision_id, depth, revno, end_of_merge)`` tuples.
      (Ian Clatworthy)

    * New ``Branch.dotted_revno_to_revision_id()`` and
      ``Branch.revision_id_to_dotted_revno()`` APIs that pick the most
      efficient way of doing the mapping.
      (Ian Clatworthy)
