@@ -315,6 +315,35 @@ class TestUnshelver(tests.TestCaseWithTransport):
         unshelver.make_merger().do_merge()
         self.assertFileEqual('z\na\nb\nd\n', 'tree/foo')
 
+    def test_unshelve_deleted(self):
+        tree = self.make_branch_and_tree('tree')
+        tree.lock_write()
+        self.addCleanup(tree.unlock)
+        self.build_tree_contents([('tree/foo/',), ('tree/foo/bar', 'baz')])
+        tree.add(['foo', 'foo/bar'], ['foo-id', 'bar-id'])
+        tree.commit('Added file and directory')
+        tree.unversion(['foo-id', 'bar-id'])
+        os.unlink('tree/foo/bar')
+        os.rmdir('tree/foo')
+        creator = shelf.ShelfCreator(tree, tree.basis_tree())
+        list(creator.iter_shelvable())
+        creator.shelve_deletion('foo-id')
+        creator.shelve_deletion('bar-id')
+        shelf_file = open('shelf', 'w+b')
+        self.addCleanup(shelf_file.close)
+        creator.write_shelf(shelf_file)
+        creator.transform()
+        creator.finalize()
+        # validate the test setup
+        self.assertTrue('foo-id' in tree)
+        self.assertTrue('bar-id' in tree)
+        self.assertFileEqual('baz', 'tree/foo/bar')
+        shelf_file.seek(0)
+        unshelver = shelf.Unshelver.from_tree_and_shelf(tree, shelf_file)
+        unshelver.make_merger().do_merge()
+        self.assertFalse('foo-id' in tree)
+        self.assertFalse('bar-id' in tree)
+
     def test_unshelve_base(self):
         tree = self.make_branch_and_tree('tree')
         tree.lock_write()
